--- a/pxtoem/test.html
+++ b/pxtoem/test.html
@@ -7,13 +7,13 @@
 <p class="text"></p>
 0.625
 
-16.0
-16.0px
-1.0rem
+<16 class="0"></16>
+1.0em
+<16 class="0px"></16>
 
-16.0px
-1.0rem
-18.0px
+1.0em
+1.0em
+1.125rem
 
 
 
